# jax-mlx-plugin

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.agents/workflows/: resnet-benchmark.md
benchmarks/: benchmark_cnn.jl  benchmark_cnn.py  benchmark_cnn_native.py  benchmark_compare.py  benchmark_mamba.py  benchmark_mlp.jl  benchmark_mlp.py  benchmark_mlp_native.py  benchmark_models.py  benchmark_models_mlx.py  benchmark_rnn.jl  benchmark_rnn.py  benchmark_rnn_native.py  benchmark_transformer.jl  benchmark_transformer.py  benchmark_transformer_native.py
docs/: ARCHITECTURE.md  BUG_torchax_resnet_jit_broadcast.md
mlx_bug_repro/: mlx_repro.py  quasi_elk_repro.py
src/: jax_mlx_pjrt.cpp  mlx_mlir_parser.h  mlx_pjrt_types.h
src/jax_mlx/: __init__.py  layer_norm.py  parser.py  plugin.py  sdpa.py
tests/: test_compilation_coverage.py  test_complex.py  test_exhaustive_while.py
